[gd_scene load_steps=21 format=3 uid="uid://dyeabu4wg6cud"]

[ext_resource type="Script" path="res://prizes/power_up.gd" id="1_wr65o"]
[ext_resource type="Texture2D" uid="uid://nmkoex7trpbp" path="res://assets/newnewassets/coin.png" id="2_bujpp"]
[ext_resource type="Texture2D" uid="uid://cw6g7m0urk8w1" path="res://assets/newnewassets/fruit.png" id="3_0avje"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="4_rhoyy"]
[ext_resource type="Script" path="res://components/move_component.gd" id="5_c118d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wmry6"]
atlas = ExtResource("2_bujpp")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ffqo"]
atlas = ExtResource("2_bujpp")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0ain"]
atlas = ExtResource("2_bujpp")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6fu3"]
atlas = ExtResource("2_bujpp")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu35i"]
atlas = ExtResource("2_bujpp")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5btwg"]
atlas = ExtResource("2_bujpp")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1txo"]
atlas = ExtResource("2_bujpp")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhemd"]
atlas = ExtResource("2_bujpp")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyrv3"]
atlas = ExtResource("2_bujpp")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qxp6"]
atlas = ExtResource("2_bujpp")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4itra"]
atlas = ExtResource("2_bujpp")
region = Rect2(176, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sd7jq"]
atlas = ExtResource("2_bujpp")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd1n4"]
atlas = ExtResource("3_0avje")
region = Rect2(0, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_xxdpr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmry6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ffqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0ain")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6fu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu35i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5btwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1txo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhemd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyrv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qxp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4itra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sd7jq")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd1n4")
}],
"loop": true,
"name": &"new_animation",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ycfb2"]
radius = 100.757

[node name="PowerUp" type="Node2D"]
script = ExtResource("1_wr65o")

[node name="Coin" type="Area2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Coin"]
position = Vector2(1.19209e-07, -1)
scale = Vector2(0.415441, 0.3375)
sprite_frames = SubResource("SpriteFrames_xxdpr")
animation = &"new_animation"
autoplay = "new_animation"
frame_progress = 0.654573

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coin"]
position = Vector2(0, -1)
scale = Vector2(0.0703125, 0.0644531)
shape = SubResource("CircleShape2D_ycfb2")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("4_rhoyy")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("5_c118d")
actor = NodePath("..")
velocity = Vector2(0, 40)

[connection signal="body_entered" from="Coin" to="." method="_on_coin_body_entered"]
